--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -370,6 +370,7 @@
 
   <!-- Next Steps -->
   <h2>Users List App</h2>
+  <p>First App</p>
 
   <mat-selection-list #shoes>
     <mat-list-option *ngFor="let shoe of typesOfShoes">
